HW7. 480px wtithout banners block

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -23,7 +23,7 @@
             <!--LOGO-->
             <div class="header">
                 <div class="header__logo">
-                    <a href="http://pingbull.se/" target="_blank"><img src="img/header_logo.png"></a>
+                    <a href="http://pingbull.se/" target="_blank"><img src="img/header_logo.png" alt="Logo image"></a>
                 </div>
 
             <!--Header MENU-->
@@ -63,7 +63,7 @@
                                 Nulla interdum arcu et felis aliquam a tempus lectus lobortis.
                             </div>
                         </div>
-                        <img src="img/header__slider_iphone.png" class="slider__img hidden">
+                        <img src="img/header__slider_iphone.png" alt="slider image" class="slider__img hidden">
                     </div>
                     <ul class="switch slider__switch">
                         <li class="switch__bullet"></li>
@@ -191,8 +191,8 @@
                 <a href="https://www.gucci.com/int/en/" target="_blank" class="banners__item">
                     <img src="img/banner2.png" alt="gucci" class="banner2">
                 </a>
-                <a href="#" class="banners__item">
-                    <img src="img/banner3.png" alt="" class="banner3">
+                <a href="https://developer.mozilla.org/ru/docs/Web/CSS/flex-shrink" target="_blank" class="banners__item">
+                    <img src="img/banner3.png" alt="smth" class="banner3">
                 </a>
                 <a href="http://www.awsmbrand.com/" target="_blank" class="banners__item">
                     <img src="img/banner4.png" alt="awsm" class="banner4">
