--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -64,13 +64,14 @@
                             </div>
                         </div>
                         <img src="img/header__slider_iphone.png" alt="slider image" class="slider__img hidden">
+
+                        <ul class="switch slider__switch">
+                            <li class="switch__bullet"></li>
+                            <li class="switch__bullet"><div class="switch__center"></div></li>
+                            <li class="switch__bullet"></li>
+                            <li class="switch__bullet"></li>
+                        </ul>
                     </div>
-                    <ul class="switch slider__switch">
-                        <li class="switch__bullet"></li>
-                        <li class="switch__bullet"><div class="switch__center"></div></li>
-                        <li class="switch__bullet"></li>
-                        <li class="switch__bullet"></li>
-                    </ul>
                 </div>
             </div>
         </header>
@@ -128,80 +129,80 @@
         <!--PINGBULLER -->
         <div class="news__wrapper position-center--horizontal">
             <div class="news">
-            <section class="pingbuller">
-                <div class="pingbuller__info_block">
-                    <img src="img/news_avatar.png" class="avatar" alt="avatar">
-                    <div class="title pingbuller__title">PINGBULLER</div>
-                    <div class="title title--description pingbuller__title--description">starts here</div>
-                    <div class="summary pingbuller__summary">
-                        <div class="pingbuller__triangle"></div>
-                        “Nunc turpis neque, feugiat eget eleifend et,
-                        lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis
-                        auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in,
-                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
-                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                        Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                        Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                        Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                <section class="pingbuller">
+                    <div class="pingbuller__info_block">
+                        <img src="img/news_avatar.png" class="avatar" alt="avatar">
+                        <div class="title pingbuller__title">PINGBULLER</div>
+                        <div class="title title--description pingbuller__title--description">starts here</div>
+                        <div class="summary pingbuller__summary">
+                            <div class="pingbuller__triangle"></div>
+                            “Nunc turpis neque, feugiat eget eleifend et,
+                            lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis
+                            auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in,
+                            venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+                            Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                            Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                            Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                            Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                            Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                        </div>
                     </div>
-                </div>
-                <ul class="switch pingbuller__switch">
-                    <li class="switch__bullet switch__bullet--theme--light"></li>
-                    <li class="switch__bullet switch__bullet--theme--light">
-                        <div class="switch__center  switch__center--theme--light"></div>
-                    </li>
-                    <li class="switch__bullet switch__bullet--theme--light"></li>
-                    <li class="switch__bullet switch__bullet--theme--light"></li>
-                </ul>
-            </section>
+                    <ul class="switch pingbuller__switch">
+                        <li class="switch__bullet switch__bullet--theme--light"></li>
+                        <li class="switch__bullet switch__bullet--theme--light">
+                            <div class="switch__center  switch__center--theme--light"></div>
+                        </li>
+                        <li class="switch__bullet switch__bullet--theme--light"></li>
+                        <li class="switch__bullet switch__bullet--theme--light"></li>
+                    </ul>
+                </section>
 
-            <!--RECENT UPDATES-->
-            <section class="recent_updates">
-                <h2 class="title recent_updates__title">recent updates</h2>
-                <div class="recent_updates__post">
-                    <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                    <div class="summary">Posted by Admin on March 13
-                        <span class="hidden"> 2012<span class="hidden-m"> in Recent News</span></span>
+                <!--RECENT UPDATES-->
+                <section class="recent_updates">
+                    <h2 class="title recent_updates__title">recent updates</h2>
+                    <div class="recent_updates__post">
+                        <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                        <div class="summary">Posted by Admin on March 13
+                            <span class="hidden"> 2012<span class="hidden-m"> in Recent News</span></span>
+                        </div>
                     </div>
-                </div>
-                <div class="recent_updates__post">
-                    <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                    <div class="summary">Posted by Admin on March 13
-                        <span class="hidden"> 2012<span class="hidden-m"> in Category</span></span>
+                    <div class="recent_updates__post">
+                        <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                        <div class="summary">Posted by Admin on March 13
+                            <span class="hidden"> 2012<span class="hidden-m"> in Category</span></span>
+                        </div>
                     </div>
-                </div>
-                <div class="recent_updates__post">
-                    <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                    <div class="summary">Posted by Admin on March 13
-                        <span class="hidden"> 2012<span class="hidden-m"> in Blog Updates</span></span>
+                    <div class="recent_updates__post">
+                        <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                        <div class="summary">Posted by Admin on March 13
+                            <span class="hidden"> 2012<span class="hidden-m"> in Blog Updates</span></span>
+                        </div>
                     </div>
-                </div>
-                <a class="link recent_updates__link" href="">more blog posts</a>
-             </section>
+                    <a class="link recent_updates__link" href="">more blog posts</a>
+                 </section>
             </div>
         </div>
 
         <!--BANNERS-->
         <section class="banners__wrapper position-center--horizontal">
             <div class="banners">
-                <a href="https://marathon.ua/billabong/" target="_blank" class="banners__item">
-                    <img src="img/banner1.png" alt="billabong" class="banner1">
+                <a href="https://marathon.ua/billabong/" target="_blank" class="banners__item banner1">
+                    <img src="img/banner1.png" alt="billabong">
                 </a>
-                <a href="https://www.gucci.com/int/en/" target="_blank" class="banners__item">
-                    <img src="img/banner2.png" alt="gucci" class="banner2">
+                <a href="https://www.gucci.com/int/en/" target="_blank" class="banners__item banner2">
+                    <img src="img/banner2.png" alt="gucci">
                 </a>
-                <a href="https://developer.mozilla.org/ru/docs/Web/CSS/flex-shrink" target="_blank" class="banners__item">
-                    <img src="img/banner3.png" alt="smth" class="banner3">
+                <a href="https://developer.mozilla.org/ru/docs/Web/CSS/flex-shrink" target="_blank" class="banners__item banner3">
+                    <img src="img/banner3.png" alt="smth">
                 </a>
-                <a href="http://www.awsmbrand.com/" target="_blank" class="banners__item">
-                    <img src="img/banner4.png" alt="awsm" class="banner4">
+                <a href="http://www.awsmbrand.com/" target="_blank" class="banners__item banner4">
+                    <img src="img/banner4.png" alt="awsm">
                 </a>
-                <a href="https://bigl.ua/sc-14515-rvca" target="_blank" class="banners__item">
-                    <img src="img/banner5.png" alt="rvca" class="banner5">
+                <a href="https://bigl.ua/sc-14515-rvca" target="_blank" class="banners__item banner5">
+                    <img src="img/banner5.png" alt="rvca">
                 </a>
-                <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank" class="banners__item">
-                    <img src="img/banner6.png" alt="VonZipper" class="banner6">
+                <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank" class="banners__item banner6">
+                    <img src="img/banner6.png" alt="VonZipper">
                 </a>
             </div>
         </section>
