HW7. Practice with svg images

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <img src="img/header__slider_iphone.png" alt="slider image" class="slider__img hidden">
 
-                        <ul class="switch slider__switch">
+                        <ul class="slider__switch">
                             <li class="switch__bullet"></li>
                             <li class="switch__bullet"><div class="switch__center"></div></li>
                             <li class="switch__bullet"></li>
@@ -143,7 +143,7 @@
                             Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                         </div>
                     </div>
-                    <ul class="switch pingbuller__switch">
+                    <ul class="pingbuller__switch">
                         <li class="switch__bullet switch__bullet--theme--light"></li>
                         <li class="switch__bullet switch__bullet--theme--light">
                             <div class="switch__center  switch__center--theme--light"></div>
