--- a/Practice/JS5/index.html
+++ b/Practice/JS5/index.html
@@ -11,10 +11,18 @@
 
 <div class="timer__wrapper">
 
-    <div class="timer__clock"><span id="siteTimer"></span>
-        <div  id="timer__mlsec"></div>
-
+    <div id="timer">
+        <div id="hour"></div>&nbsp;:
+        <div id="minute"></div>&nbsp;:
+        <div id="second"></div>
+        <div id="millisecond"></div>
     </div>
+
+    <!--<div class="timer__clock"><span id="siteTimer"></span>
+
+    </div> -->
+
+
     <div class="buttons__wrapper">
         <div id="start" class="button button__start">Start</div>
         <div id="pause" class="button button__pause">Pause</div>
