JS HW 8. Show-up hints & Button Help

--- a/Practice/JS8/index.html
+++ b/Practice/JS8/index.html
@@ -26,5 +26,6 @@
             <input id="address" name="address" title="Your home or work address.">
         </div>
     </fieldset>
+    <input type="button" value="Show help">
 </form>
 </body>
