--- a/Practice/JS9/index.html
+++ b/Practice/JS9/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/jquery.selectBox.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/jquery.jcarousel.js"></script>
+    <script src="js/jquery.selectBox.js" type="text/javascript"></script>
     <script src="js/scrypt.js"></script>
 </head>
 
@@ -45,4 +47,15 @@
         </div>
     </div>
 </div>
+
+<form >
+    <select>
+        <option class="" value="1">Item 1</option>
+        <option class="" value="2">Item 2</option>
+        <option class="" value="3">Item 3</option>
+        <option class="" value="4">Item 4</option>
+        <option class="" value="5">Item 5</option>
+        <option class="" value="6">Item 6</option>
+    </select>
+</form>
 </body>
