JS HW 9. Added checkbox

--- a/Practice/JS9/index.html
+++ b/Practice/JS9/index.html
@@ -10,6 +10,7 @@
     <script src="js/jquery.jcarousel.js"></script>
     <script src="js/jquery.selectBox.js" type="text/javascript"></script>
     <script src="js/scrypt.js"></script>
+    <script src="js/jquery.checkbox.js"></script>
 </head>
 
 <body>
@@ -58,4 +59,8 @@
         <option class="" value="6">Item 6</option>
     </select>
 </form>
+
+<span class="niceCheck"><input type="checkbox" name="ch1" /></span>
+
+
 </body>
