--- a/Practice_2020/HW3/index.html
+++ b/Practice_2020/HW3/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="ru">
 <head>
     <title>Home Work 3_2020</title>
     <meta charset="utf-8">
@@ -64,3 +65,4 @@
 </div>
 
 </body>
+</html>>
