--- a/Practice_2020/HW3/index.html
+++ b/Practice_2020/HW3/index.html
@@ -62,6 +62,14 @@
         </ul>
     </nav>
 </footer>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                 alt="Правильный CSS!" />
+        </a>
+    </p>
+
 </div>
 
 </body>
