added Content and Footer

--- a/Practice_2020/HW3_bonus/index.html
+++ b/Practice_2020/HW3_bonus/index.html
@@ -5,9 +5,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/fitness_content.css">
-    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
@@ -22,21 +19,25 @@
    </div>
 </header>
     <!--CONTENT-->
-<div class="countries_wrapper">
-    <nav class="countries">
+    <nav>
         <ul class="countries_list">
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
-            <li class="countries_item"><a class="countries_link"><img src=" " alt="" class="countries_img"></a></li>
+            <li class="countries_item"><a class="countries_link" href="#">
+                <img src="img/countries_india.jpg" alt="" class="countries_img">India</a></li>
+             <li class="countries_item"><a class="countries_link" href="#">
+                 <img src="img/countries_nepal.jpg" alt="" class="countries_img">Nepal</a></li>
+             <li class="countries_item"><a class="countries_link" href="#">
+                 <img src="img/countries_tibet.jpg" alt="" class="countries_img">Tibet</a></li>
+             <li class="countries_item"><a class="countries_link" href="#">
+                 <img src="img/countries_butan.jpg" alt="" class="countries_img">Butan</a></li>
+             <li class="countries_item"><a class="countries_link" href="#">
+                 <img src="img/countries_sri-lanka.jpg " alt="" class="countries_img">Sri Lanka</a></li>
+             <li class="countries_item"><a class="countries_link" href="#">
+                 <img src="img/countries_maldives.jpg" alt="" class="countries_img">Maldives</a></li>
         </ul>
     </nav>
-</div>
     <!--FOOTER--> 
 <footer>
-    <div class="copyright"></div>
+    <span class="copyright">Copyright (c) asia-holidays.com. 2010</span>
 </footer>
 </div>
 </body>
