changed content width

--- a/Practice_2020/HW3_bonus/index.html
+++ b/Practice_2020/HW3_bonus/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <title>Home Work 3_2020_bonus</title>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
    </div>
 </header>
     <!--CONTENT-->
-    <nav>
+    <nav class="countries">
         <ul class="countries_list">
             <li class="countries_item"><a class="countries_link" href="#">
                 <img src="img/countries_india.jpg" alt="" class="countries_img">India</a></li>
@@ -37,7 +37,7 @@
     </nav>
     <!--FOOTER--> 
 <footer>
-    <span class="copyright">Copyright (c) asia-holidays.com. 2010</span>
+    <span>Copyright (c) asia-holidays.com. 2010</span>
 </footer>
 </div>
 </body>
