Home Work 4. Header done

--- a/Practice_2020/HW4/index.html
+++ b/Practice_2020/HW4/index.html
@@ -14,10 +14,10 @@
         <div class="header__logo"></div>
         <div class="header__info">
             <div class="header__contacts">
-                <span class="contact_us">Наши контакты</span>
-                <span class="contacts_phone">+12 34 567 9810</span>
-                <span class="contacts_phone">+12 34 567 9810</span>
-                <span class="contacts_e-mail">info@saia-holidays.com</span>
+                <span class="header__contacts__contact_us">Наши контакты:</span>
+                <span>+12 34 567 9810</span>
+                <span >+12 34 567 9810</span>
+                <span>info@saia-holidays.com</span>
             </div>
             <nav class="header__menu">
                 <ul class="header__menu__list">
@@ -36,9 +36,10 @@
                 </ul>
             </nav>
         </div>
-        <div class="header_image"></div>
+
 
     </header>
+    <div class="header_image"></div>
     <!--CONTENT-->
     <nav class="content__main_menu">
         <ul class="main_menu__list">
