--- a/Practice_2020/HW4/index.html
+++ b/Practice_2020/HW4/index.html
@@ -19,7 +19,7 @@
                 <span >+12 34 567 9810</span>
                 <span>info@saia-holidays.com</span>
             </div>
-            <nav class="header__menu">
+            <nav>
                 <ul class="header__menu__list">
                     <li class="header__menu__item"><a class="header__menu__link" href="#">
                         <img src="img/header__menu__image__india.png" alt="" class="header__menu__image">Индия</a></li>
@@ -36,27 +36,26 @@
                 </ul>
             </nav>
         </div>
-
-
     </header>
-    <div class="header_image"></div>
+
     <!--CONTENT-->
+    <div class="content__image"></div>
     <nav class="content__main_menu">
-        <ul class="main_menu__list">
-            <li class="countries_item"><a class="countries_link" href="#">Главная</a></li>
-            <li class="countries_item"><a class="countries_link" href="#">Путешествие</a>
-                <ul class="submenu">
+        <ul class="content__main_menu__list">
+            <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Главная</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Путешествие</a>
+                <ul class="content__main_menu__submenu">
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие1</a></li>
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие2</a></li>
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие3</a></li>
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие4</a></li>
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие5</a></li>
                 </ul></li>
-            <li class="countries_item"><a class="countries_link" href="#">Услуги</a></li>
-            <li class="countries_item"><a class="countries_link" href="#">Партнерам</a></li>
-            <li class="countries_item"><a class="countries_link" href="#">Отзывы клиентов</a></li>
-            <li class="countries_item"><a class="countries_link" href="#">О нас</a></li>
-            <li class="countries_item"><a class="countries_link" href="#">Контакты</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Услуги</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Партнерам</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Отзывы клиентов</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">О нас</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Контакты</a></li>
         </ul>
     </nav>
     <aside class="sidebar"></aside>
