Added content and Footer

--- a/Practice_2020/HW4/index.html
+++ b/Practice_2020/HW4/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main_menu.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
-<div class="main_page">
+<div class="main_page clearfix">
     <!--HEADER-->
     <header>
         <div class="header__logo"></div>
@@ -30,9 +33,13 @@
                     <li class="header__menu__item"><a class="header__menu__link" href="#">
                         <img src="img/header__menu__image__butan.png" alt="" class="header__menu__image">Бутан</a></li>
                     <li class="header__menu__item"><a class="header__menu__link" href="#">
-                        <img src="img/header__menu__image__sri-lanka.png" alt="" class="header__menu__image">Шри-Ланка</a></li>
+                        <img src="img/header__menu__image__sri-lanka.png" alt="" class="header__menu__image">
+                        Шри-Ланка</a>
+                    </li>
                     <li class="header__menu__item"><a class="header__menu__link" href="#">
-                        <img src="img/header__menu__image__maldives.png" alt="" class="header__menu__image">Мальдивы</a></li>
+                        <img src="img/header__menu__image__maldives.png" alt="" class="header__menu__image">
+                        Мальдивы</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -45,11 +52,11 @@
             <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Главная</a></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Путешествие</a>
                 <ul class="content__main_menu__submenu">
-                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие1</a></li>
-                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие2</a></li>
-                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие3</a></li>
-                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие4</a></li>
-                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие5</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 1</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 2</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 3</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 4</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 5</a></li>
                 </ul></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Услуги</a></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Партнерам</a></li>
@@ -58,10 +65,52 @@
             <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Контакты</a></li>
         </ul>
     </nav>
-    <aside class="sidebar"></aside>
-    <div class="news"></div>
-    <div class="content"></div>
+
+
+    <div class="fon3"> <!-- фон для правой колонки  sidebar -->
+        <div class="fon2"> <!-- фон для центральной колонки -->
+            <div class="fon1">
+                <aside class="content__sidebar">
+                    <div class="content__title">Информация</div>
+                    <div class="content__text"> Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet</div>
+                </aside>
+                <div class="content"></div>
+                <div class="content__news">
+                    <div class="content__title"><span>Новости</span></div>
+                    <div class="content__text">Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet
+                    Lorem ipsum dolor sit amet</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <!--FOOTER-->
 <footer>
     <span>Copyright (c) asia-holidays.com. 2010</span>
