Home Work4. Fixed submenu displaying

--- a/Practice_2020/HW4/index.html
+++ b/Practice_2020/HW4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home Work 3_2020_bonus</title>
+    <title>Home Work 4_2021_bonus</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -58,8 +58,20 @@
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 4</a></li>
                     <li class="submenu_item"><a class="submenu_link" href="#">Путешествие 5</a></li>
                 </ul></li>
-            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Услуги</a></li>
-            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Партнерам</a></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Услуги</a>
+                <ul class="content__main_menu__submenu">
+                    <li class="submenu_item"><a class="submenu_link" href="#">Услуги 1</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Услуги 2</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Услуги 3</a></li>
+                </ul></li>
+            <li class="content__main_menu__item"><a class="content__main_menu__link arrow_down" href="#">Партнерам</a>
+                <ul class="content__main_menu__submenu">
+                    <li class="submenu_item"><a class="submenu_link" href="#">Партнерам 1</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Партнерам 2</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Партнерам 3</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Партнерам 4</a></li>
+                    <li class="submenu_item"><a class="submenu_link" href="#">Партнерам 5</a></li>
+                </ul></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Отзывы клиентов</a></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">О нас</a></li>
             <li class="content__main_menu__item"><a class="content__main_menu__link" href="#">Контакты</a></li>
